<resources>
    <string name="StudentManagementSystem">eKakchhya</string>
    <string name="user_name">Name:</string>
    <string name="designation">Designation:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="Developers_Name">Developers \n
        <br> \n </br>
        <br> Prajum Shrestha (73052) \n   prajumshrestha189@gmail.com  \n </br>
        <br> \n </br>
        <br> Rojan Adhikari (73061) \n    dr.rojan1998@gmail.com \n </br>
        <br> \n </br>
        <br> Santosh Acharya (73070) \n   santoshacharya747@gmail.com \n </br>
        <br> \n </br>
        <br> Suman Khanal (73084) \n      Sumankhanal770@gmail.com \n </br>
        <br> \n </br>

    </string>


    <string-array name="Designation">
        <item> Admin </item>
        <item> Teachers </item>
        <item> Student </item>
    </string-array>

    <string-array name="select_subject">
        <item> Select Subject (if teacher) </item>
        <item> Database management system </item>
        <item> Object Oriented Analysis and Design </item>
        <item> Economics </item>
        <item> Artificial Intelligence </item>
        <item> Embedded Systems</item>
        <item> Operating Systems </item>
    </string-array>

    <string name="Splash">
    <br> WELCOME \n </br>
        <br> \n  </br>
        <br> TO  \n </br>
        <br> \n  </br>
        <br> eKAKCHHYA \n </br>
        <br> \n  </br>
        <br> an online classroom  app \n </br>
        <br> \n  </br>
        <br> \n  </br>
        <br> \n  </br>
        <br> \n  </br>
        <br> \n  </br>
        <br> \n  </br>
        <br> \n  </br>

        <br>VERSION 1.0.0</br>

    </string>


    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>


</resources>
