<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".Signup_Form">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:src="@drawable/signupimage" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"


            >

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"

                android:textSize="20sp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"



            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:id="@+id/Password"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"


            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:id="@+id/ConPassword"


                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:background="@drawable/button_rounded"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/Register"/>

    </LinearLayout>
</ScrollView>
