<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".Signup_Form_admin">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="346dp"
            android:layout_height="89dp"
            android:src="@drawable/signupimage" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:layout_marginTop="10dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                android:textColorHint="#2d3436"
                android:id="@+id/UserName"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"


            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="User Type:"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"></Button>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="333dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/designation"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:visibility="visible"
                    />

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="20sp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"



            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:id="@+id/Password"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:id="@+id/ConPassword"


                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/Rollnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Roll number(if student)"
                android:inputType="text"
                android:textSize="20sp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"


            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="363dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="1dp"
                    android:ems="10"
                    android:hint="@string/designation"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:visibility="visible" />

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:background="@drawable/button_rounded"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/Register"/>

    </LinearLayout>
</ScrollView>
